adding categories and newsletter

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="manifest" href="/favicon/site.webmanifest">
     <link rel="manifest" href="/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="online embassy" content="Welcome to the Online Embassy – your trusted platform for seamless visa applications, consular services, and international document processing. Explore resources, get support, and stay connected with your home country from anywhere in the world.">
-    <meta author="online embassy batch224-2" content="online embassy, best embassy in bangladesh, free embassy in bangladesh">
+    <meta name="Dorkari Ponno" content="At Dorkari Ponno, we bring you high-quality, second-hand, and budget-friendly essentials. Whether you're looking for home appliances, electronics, furniture, or daily necessities, we offer carefully selected products at unbeatable prices. Our goal is to make sustainable shopping easier while ensuring affordability and reliability. With a commitment to customer satisfaction, we provide well-inspected, durable items that fit your needs. Shop smart, save more, and give products a second life with Dorkari Ponno.
+
+    Why pay more when you can get the best for less? Start shopping today! 🛍️♻️">
+    <meta author="dorkari ponno final assignment" content="Dorkari Ponno – Your Trusted Store for Essential Products!">
     <title>Dorkari Ponno</title>
   </head>
   
